First production MMP75 run.